--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyTestApprajkumar</string>
+    <string name="email_id">Email :</string>
+    <string name="poneNumber">Phone :</string>
+    <string name="location">Location :</string>
 </resources>
